Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4016 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/BuidlingPackage.wiki
+++ b/wiki/BuidlingPackage.wiki
@@ -35,17 +35,13 @@ Theoretically speaking, QMCPACK can be used on any *nix machine with recent GNU 
 For cmake documentation and guides, consult
 [http://www.cmake.org/Wiki/CMake cmake wiki]
 
-<div style="padding-left:2em">
+
  # get source tree from the subversion repository
- # change to ''qmcpack'' the top directory (name can be different):
-<code>cd qmcpack</code>
- # Change to the build directory:
-<code>cd build</code>
- # run cmake to create Makefiles (Don't forget '''..'''):
-<code>cmake ..</code>
- # make everything:
-<code>make</code>
-</div>
+ # change to ''qmcpack'' the top directory (name can be different):`cd qmcpack`
+ # Change to the build directory:`cd build`
+ # run cmake to create Makefiles (Don't forget '''..'''): `cmake ..`
+ # make everything: `make`
+
 
 If everything goes well, then you should see '''topdir/build/bin/qmcapp'''.
 
@@ -55,19 +51,19 @@ qmcpack directory tree
   ** src  : source directory
   ** CMake : cmake directory for external package and compiler
 
-'''Out-of-source compilation''' is recommend. The procedure above, creating ''build'' directory and running camke in a new directory, is an example. We can further separate the source (development) and build.
-Let's assume that the QMCPACK ''topdir'' is /home/foo/src/qmcpack. Then, one can build multiple executables in different locations by creating new directories and build QMCPACK in each directory.
-<code>
+*Out-of-source compilation* is recommend. The procedure above, creating _build_ directory and running `camke` in a new directory, is an example. We can further separate the source (development) and build.
+Let's assume that the QMCPACK _topdir_ is `/home/foo/src/qmcpack`. Then, one can build multiple executables in different locations by creating new directories and build QMCPACK in each directory.
+{{{
 /home/foo/build/gcc-real
 /home/foo/build/gcc-complex
 /home/foo/build/mpi-real
-</code>
+}}}
 In each directory, e.g., /home/foo/build/gcc-real (after setting the environments properly), execute
-<code>
+{{{
 $cmake /home/foo/src/qmcpack
 $make 
-</code>
-There is no need to change sources or cmake files. '''cmake ..''' in the main procedure uses '''..''' because the source tree resides in the parent directory.
+}}}
+There is no need to change sources or cmake files. *`cmake ..`* in the main procedure uses *..* because the source tree resides in the parent directory.
 
 If something did not work, simply remove the directory (e.g., <code>rm -rf gcc-real</code>) and start again.
 
