--- a/wiki/BuidlingPackage.wiki
+++ b/wiki/BuidlingPackage.wiki
@@ -37,13 +37,13 @@ For cmake documentation and guides, consult
 
 
  # get source tree from the subversion repository
- # change to ''qmcpack'' the top directory (name can be different):`cd qmcpack`
- # Change to the build directory:`cd build`
- # run cmake to create Makefiles (Don't forget '''..'''): `cmake ..`
- # make everything: `make`
+ # change to ''qmcpack'' the top directory (name can be different):{{{cd qmcpack}}}
+ # Change to the build directory: {{{cd build}}}
+ # run cmake to create Makefiles (Don't forget '''..'''): {{{cmake ..}}}
+ # make everything: {{{make}}}
 
 
-If everything goes well, then you should see '''topdir/build/bin/qmcapp'''.
+If everything goes well, then you should see *`topdir/build/bin/qmcapp`*.
 
 qmcpack directory tree
  * qmcpack topdir
