Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4038 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,4 +3,4 @@
  * [BuildingPackage Building]
  * [SampleRuns Sample Runs]
  * Design Notes
-  ** [ClassDiagrams Class Diagrams]
+  ** [ClassOverview Class Overview]
