Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4040 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,5 +2,6 @@
 
  * [BuildingPackage Building]
  * [SampleRuns Sample Runs]
- * Design Notes
+ * For developers
+  * [DevHandbook Developers' Handbook]
   * [ClassOverview Class Overview]
