--- a/wiki/CMakeExplained.wiki
+++ b/wiki/CMakeExplained.wiki
@@ -2,7 +2,9 @@
 #labels Phase-Deploy
 #sidebar TableOfContents
 
-= What is cmake and why =
+= What is cmake =
+[http://www.cmake.org According to cmake homepage]
+ the cross-platform, open-source build system
 
 = CMake files =
  * CMakeLists.txt files are recursively included: e.g., the last line of  topdir/CMakeLists.txt is <pre>SUBDIRS(src)</pre>
@@ -30,7 +32,7 @@ SET(QMC_MPI 1 CACHE BOOL "Enable/disable MPI")
 SET(QMC_OMP 0 CACHE BOOL "Enable/disable OpenMP")
 SET(QMC_BITS 32 CACHE INTEGER "Select OS bit")
 }}}
- * OHMMS_xyz s are old macros and will be replaced by APP_
+ * OHMMS_xyz s are old macros and will be replaced by _APP_
   * APP stands for APPlication so that other application can use it without feeling constrained by the name OHMMS.
  * QMC_COMPLEX=1 is for complex wavefunctions and fixed-phase DMC/RMC methods.
  * The "cached" parameters can be modified by users manually during a build (see [[Modifying CMakeCache.txt during a build]])
@@ -52,12 +54,16 @@ export QMC_COMPLEX=1
  * Or, edit CMakeCache.txt file and run `cmake topdir` again.
 
 = Selecting compilers =
- * '''Use CXX and CC to set the compilers in your shell.'''
- * Without setting them, you are using  CXX=g++ and CC=gcc and the default properties of the GNU compilers you are using.
+ * Use CXX and CC to set the compilers in your shell, e.g., 
+ {{{
+ export CXX=mpicxx
+ export CC=gcc
+ }}}
+ * Without setting them, you are using  `CXX=g++` and `CC=gcc` and the default properties of the GNU compilers you are using.
  * cmake will use CMake/XYZCompilers.cmake, for XYZ=GNU, Intel, or IBM, if one of them is used.
-  * CXX=icpc for Intel compilers
-  * CXX=xlC for IBM compilers
- * When you use MPI compilers or scripts, e.g., mpicxx, few problems can arise. Check [[How to enable MPI]].
+  * `CXX=icpc` for Intel compilers
+  * `CXX=xlC` for IBM compilers
+ * When you use MPI compilers or scripts, e.g., mpicxx, few problems can arise. 
  * on jaguar at ORNL, CMake/CrayXT.cmake is automatically used. 
  * You can create your own compiler cmake file for fine tuning (See [[Writing your own cmake files]])
  Note that
